--- a/Testing/htmltest2.html
+++ b/Testing/htmltest2.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Course Sign Up Page</h1>
   <p>Please Note : First Name,Last Name,Password and Email are required</p>
-  <form  method="get">
+  <form  action="thanks.html" method="get">
   <label for="FirstName">First Name:</label>
   <input type="text" id="FirstName" placeholder="First Name" required>
   <label for="LastName">Last Name:</label>
